######### 2013-2-22   #########
create index idx_mergetrade_receiver_mobile on shop_trades_mergetrade(receiver_mobile);
create index idx_mergetrade_receiver_phone on shop_trades_mergetrade(receiver_phone);
########  2013-2-21   #########
alter table shop_trades_mergetrade add column return_out_sid varchar(64) NOT NULL;
create index index_mergetrade_return_out_sid on shop_trades_mergetrade(return_out_sid);
alter table shop_trades_mergetrade add column return_logistic_company varchar(64) NOT NULL;
########  2013-2-20   #########
alter table shop_trades_mergetrade add column weight_time datetime DEFAULT NULL;
(update shop_trades_mergetrade set weight_time = consign_time;)
########  2013-1-15   #########
alter table shop_trades_mergetrade add column can_review tinyint(1) NOT NULL;
########  2013-1-14   #########
alter table shop_trades_mergeorder add column is_reverse_order tinyint(1) NOT NULL;
########  2013-1-11   #########
alter table shop_trades_mergetrade add column has_sys_err tinyint(1) NOT NULL;
########  2012-12-29  #########
CREATE UNIQUE INDEX uniq_item_outer_and_sku_id ON shop_memorule_composerule(outer_id,outer_sku_id);
########  2012-12-28  #########
alter table shop_users_user add column contacter varchar(32) NOT NULL;
alter table shop_users_user add column phone varchar(20) NOT NULL;
alter table shop_users_user add column mobile varchar(20) NOT NULL;
alter table shop_users_user add column area_code varchar(10) NOT NULL;
########  2012-12-12  #########
alter table shop_monitor_systemconfig drop is_confirm_delivery_auto;
########  2012-12-06  #########
alter table shop_trades_mergetrade drop year;
alter table shop_trades_mergetrade drop month;
alter table shop_trades_mergetrade drop day;
alter table shop_trades_mergetrade drop hour;
alter table shop_trades_mergetrade drop week;

alter table shop_trades_mergeorder drop year;
alter table shop_trades_mergeorder drop month;
alter table shop_trades_mergeorder drop day;