@@ -56,7 +56,11 @@
         <ul class="object-tools">
           {% block object-tools-items %}
           	<li>
-              <a href="/items/product/" class="addlink">库存管理
+              <a href="/items/product/" class="addlink">淘宝库存管理
+              </a>
+            </li>
+            <li>
+              <a href="/items/product/" class="addlink">系统库存管理
               </a>
             </li>
             <li>
